@@ -7,6 +7,7 @@
 - Fix missing scrollbars
 - Fix music osd rating
 - Fix for colorbox settings
+- Fix for TMDb helper mouse issue
 
 0.9.46
 - Add blur effect settings
